# VSTakoyaki

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: clang-format.yml
cmake/: auto_group_sources.cmake  compiler_features.cmake  compiler_warnings.cmake  prevent_in_source_builds.cmake  standard_project_setup.cmake
scripts/: build  clean  gen  open  test
takoyaki/: CMakeLists.txt
takoyaki/resource/: imgui.ini  takoyakieditor.uidesc
takoyaki/source/: data_provider.hpp  fft.hpp  precompiled.hpp  takoyakicids.h  takoyakicontroller.cpp  takoyakicontroller.h  takoyakientry.cpp  takoyakiprocessor.cpp  takoyakiprocessor.h  version.h  window.cpp  window.hpp
takoyaki/source/takoyaki/: data_provider.hpp  fft.hpp  imgui_wrapper.cpp  imgui_wrapper.hpp  takoyaki_view.cpp  takoyaki_view.hpp  window.cpp  window.hpp
takoyaki/source/takoyaki/visualizer/: visualizer.cpp  visualizer.hpp
takoyaki/source/takoyaki/visualizer/editor/: handlers.hpp  main_editor.cpp  main_editor.hpp  service_manager.cpp  service_manager.hpp  takoyaki.cpp  takoyaki.hpp
takoyaki/source/takoyaki/visualizer/editor/handlers/: handlers.hpp
takoyaki/source/takoyaki/visualizer/editor/widgets/: camera.cpp  camera.hpp  preview.cpp  preview.hpp  uniform_item.hpp  uniforms_menu.cpp  uniforms_menu.hpp  widget.cpp  widget.hpp
takoyaki/source/takoyaki/visualizer/graphics/: base_window.hpp  main_window.cpp  main_window.hpp  renderer.cpp  renderer.hpp
takoyaki/source/takoyaki/visualizer/graphics/gl/: render_command.hpp  render_commands.hpp  render_target.cpp  render_target.hpp  shader.hpp  shader_program.hpp
takoyaki/source/takoyaki/visualizer/serializer/: buffer.hpp  serializer.hpp
takoyaki/source/takoyaki/visualizer/util/: file_watcher.cpp  file_watcher.hpp  input.hpp
